--- a/team_profi/Pages/DopPages/AssigmentAnswerCreate.xaml
+++ b/team_profi/Pages/DopPages/AssigmentAnswerCreate.xaml
@@ -32,7 +32,7 @@
                     <RowDefinition Height="290*"/>
                 </Grid.RowDefinitions>
                 <TextBlock HorizontalAlignment="Left" FontSize="24" Style="{StaticResource ModernTextBlock}" Margin="26,16,0,0" TextWrapping="Wrap" Text="Основная информация" VerticalAlignment="Top" Height="30" Width="260"/>
-                <TextBox HorizontalAlignment="Center" Grid.Row="1" Name="TxtBox_Descr" Style="{StaticResource ModernTextBoxInfoAssigm}" TextWrapping="Wrap" VerticalAlignment="Center" Width="800" Height="369"/>
+                <TextBox HorizontalAlignment="Center" Grid.Row="1" Name="TxtBox_Descr" Style="{StaticResource ModernTextBoxInfoAssigmAnswer}" TextWrapping="Wrap" VerticalAlignment="Center" Width="800"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
