ДАААА, оно вышло, оно получилось , остались сраные баги

--- a/team_profi/Theme/StylesBorder.xaml
+++ b/team_profi/Theme/StylesBorder.xaml
@@ -30,4 +30,10 @@
         <Setter Property="Height" Value="150"/>
     </Style>
 
+    <!--стиль для бордер ответы препода ученику-->
+    <Style x:Key="BlueRoundedInfoAnswerBorder" TargetType="Border">
+        <Setter Property="Background" Value="#cfe1ff"/>
+        <Setter Property="CornerRadius" Value="20"/>
+    </Style>
+
 </ResourceDictionary>
