--- a/team_profi/Pages/UserPages/RaitingUserPage.xaml
+++ b/team_profi/Pages/UserPages/RaitingUserPage.xaml
@@ -9,43 +9,35 @@
       Title="RaitingUserPage">
 
     <Grid x:Name="MainGrid">
-
-
         <DataGrid Name="DataGridUser" AutoGenerateColumns="False" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" 
-      GridLinesVisibility="None" HeadersVisibility="None">
+              GridLinesVisibility="None" HeadersVisibility="None">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="DataGridRow">
                                 <Grid Name="GridText">
-                                    <TextBlock x:Name="NumberTextBlock"
+                                    <TextBlock x:Name="NumberTextBlock" Text="{Binding Rank}"
                                             Style="{StaticResource ModernTextBlockNumRaiting}" 
-                                            HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0"
-                                            Loaded="NumberTextBlock_Loaded"/>
+                                            HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0" />
+
                                     <Border Style="{StaticResource ModernBorderRaiting}" Margin="50,10,10,10">
                                         <Grid>
                                             <!-- Нумерация -->
 
-
                                             <!-- Здесь размещаем ФИО и общее количество баллов -->
-                                            <TextBlock Name="txtBl_Info" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="100,0,0,0"/>
+                                            <TextBlock Name="txtBl_Info" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="100,0,0,0" 
+                                                   Text="{Binding FullName}" />
                                             <TextBlock Text="{Binding TotalPoints}" Style="{StaticResource ModernTextBlockPointsRaiting}" HorizontalAlignment="Right" Margin="5" Padding="0,0,40,0"/>
                                         </Grid>
                                     </Border>
                                 </Grid>
-
-
-
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
                 </Style>
             </DataGrid.RowStyle>
         </DataGrid>
-
-
-
-
     </Grid>
+
 </Page>
