--- a/team_profi/Pages/MainPages/SignIn.xaml
+++ b/team_profi/Pages/MainPages/SignIn.xaml
@@ -56,7 +56,7 @@
                     HorizontalAlignment="Left" VerticalAlignment="Top"
                     Margin="201,0,0,0" 
                     Height="40" Width="156"
-                    Style="{StaticResource ModernButtonsForgotPasw}"/>
+                    Style="{StaticResource ModernButtonsForgotPasw}" Click="ForgotPasword_Click"/>
             <Button Grid.Column="1" Content="ВОЙТИ" 
                     HorizontalAlignment="Left" VerticalAlignment="Top" 
                     Margin="154,0,0,0" Height="46" Width="144"
