--- a/team_profi/Pages/DopPages/Pasword/CheckPaswPage.xaml
+++ b/team_profi/Pages/DopPages/Pasword/CheckPaswPage.xaml
@@ -5,10 +5,32 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:team_profi.Pages.DopPages.Pasword"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CheckPaswPage">
+        Width="800" Height="700"
+  Title="ForgotPawordPage">
 
-    <Grid>
-        
+    <Grid x:Name="Grid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="500*"/>
+            <RowDefinition Height="100*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="1" Name="GridCode">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="250*"/>
+            </Grid.RowDefinitions>
+            <TextBlock HorizontalAlignment="Center" Margin="0,102,0,0" TextWrapping="Wrap" Style="{StaticResource ModernTextBlockTaskName}" Text="Восстановление пароля" VerticalAlignment="Top" Height="47" Width="570"/>
+            <Button Content="Проверить код" Style="{StaticResource ModernButtonSignIn}" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Height="62" Width="392" Margin="0,2,0,0" Click="CodeVerify_Click"/>
+
+            <TextBox x:Name="TxtBox_Code1" HorizontalAlignment="Left" Style="{StaticResource ModernTxtBoxCodew}" Margin="194,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="95" Height="94"/>
+            <TextBox x:Name="TxtBox_Code2" HorizontalAlignment="Left" Style="{StaticResource ModernTxtBoxCodew}" Margin="309,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="91" Height="94"/>
+            <TextBox x:Name="TxtBox_Code3" HorizontalAlignment="Left" Style="{StaticResource ModernTxtBoxCodew}" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" Height="94" Margin="426,0,0,0"/>
+            <TextBox x:Name="TxtBox_Code4" HorizontalAlignment="Left" Style="{StaticResource ModernTxtBoxCodew}" Margin="541,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="88" Height="94"/>
+
+
+            <Label Content="КОД" Style="{StaticResource ModernLabelText}" FontSize="30" HorizontalAlignment="Left" Margin="108,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="86"/>
+        </Grid>
+
     </Grid>
 </Page>
