--- a/team_profi/Pages/DopPages/Pasword/ChangePasword.xaml
+++ b/team_profi/Pages/DopPages/Pasword/ChangePasword.xaml
@@ -5,10 +5,31 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:team_profi.Pages.DopPages.Pasword"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ChangePasword">
+            Width="800" Height="700"
+Title="ForgotPawordPage">
 
-    <Grid>
-        
+    <Grid x:Name="Grid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="500*"/>
+            <RowDefinition Height="100*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="1" Name="GridCode">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="150*"/>
+            </Grid.RowDefinitions>
+            <TextBlock HorizontalAlignment="Center" Margin="0,102,0,0" TextWrapping="Wrap" Style="{StaticResource ModernTextBlockTaskName}" Text="Восстановление пароля" VerticalAlignment="Top" Height="47" Width="570"/>
+            <Button Content="ИЗМЕНИТЬ ПАРОЛЬ" Style="{StaticResource ModernButtonSignIn}" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Height="62" Width="392" Margin="0,10,0,0" Click="ChangePasw_Click"/>
+
+            <TextBox x:Name="TxtBox_NewPasw1" HorizontalAlignment="Left" Style="{StaticResource ModernTextBoxChangePasw}" Margin="319,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="403" Height="94"/>
+            <TextBox x:Name="TxtBox_NewPasw2" HorizontalAlignment="Left" Style="{StaticResource ModernTextBoxChangePasw}" Margin="319,0,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="403" Height="94"/>
+
+            <Label Content="НОВЫЙ ПАРОЛЬ" Style="{StaticResource ModernLabelText}" FontSize="30" HorizontalAlignment="Left" Margin="70,0,0,0" Grid.Row="1" VerticalAlignment="Center" Width="244"/>
+            <Label Content="ПОДТВЕРЖДЕНИЕ" Style="{StaticResource ModernLabelText}" FontSize="30" HorizontalAlignment="Left" Margin="53,22,0,0" Grid.Row="2" VerticalAlignment="Top" Width="261"/>
+        </Grid>
+
     </Grid>
 </Page>
