--- a/team_profi/Theme/StylesTextBox.xaml
+++ b/team_profi/Theme/StylesTextBox.xaml
@@ -502,4 +502,54 @@
         </Setter>
     </Style>
 
+
+    <!--TxtBox изменение пароля-->
+    <Style TargetType="{x:Type TextBox}" x:Key="ModernTextBoxChangePasw">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border CornerRadius="20"
+                         BorderThickness="3"
+                         BorderBrush="#003cff"
+                         Width="400" Height="50">
+
+                        <Grid>
+                            <Rectangle StrokeThickness="1"/>
+                            <TextBox Margin="1"
+                                  Text="{Binding Path=Text, RelativeSource={RelativeSource TemplatedParent}}"
+                                  BorderThickness="0"
+                                  Background="Transparent"
+                                  VerticalContentAlignment="Center"
+                                  Padding="5"
+                                  TextWrapping="Wrap"
+                                  Foreground="#1c73ff"
+                                  FontSize="20"
+                                  x:Name="SearchBox"/>
+
+                            <TextBlock IsHitTestVisible="False"
+                                    Text="Введите свои данные ✏️"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Left"
+                                    Margin="10,0,0,0"
+                                    FontSize="15"
+                                    Foreground="DarkGray">
+
+                                <TextBlock.Style>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
+                                                <Setter Property="Visibility" Value="Visible"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                        <Setter Property="Visibility" Value="Hidden"/>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
